# tickets-management

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/config/: settings.py
app/crud/: exceptions.py  tickets_crud.py
app/db/: sqlite.py
app/models/: models.py
app/routers/: tickets_api.py
app/routes/: tickets_api.py
app/schemas/: tickets.py
tests/integration/: conftest.py  test_integration.py
tests/unit/: conftest.py  test_create_tickets.py  test_delete_tickets.py  test_get_ticket.py  test_list_tickets.py  test_update_ticket.py
